<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mysqlitedetabase.MainActivity">

    <LinearLayout
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:textSize="10dp"
            android:textStyle="bold"
            android:text="Name:  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

        />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/ageEditTextId"
        tools:ignore="DuplicateIds" />

    </LinearLayout>

<LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/ageEditTextId"
                />

    </LinearLayout>

    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/genderEditTextId"
                />

    </LinearLayout>
    <LinearLayout
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:id="@+id/idEditTextId"
                />

    </LinearLayout>

    <Button
            android:id="@+id/addButtonId"
            android:text="@string/add_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
    />

    <Button
    android:id="@+id/displayAllDetaButtonId"
    android:text="@string/display_data"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

   <Button
    android:id="@+id/updateAllDetaButtonId"
    android:text="@string/update_data"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    />

    <Button
        android:id="@+id/deleteAllDetaButtonId"
        android:text="@string/delete_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    </LinearLayout>
